# ToolsSeminar

./: Assignment_Week_1.txt  README.md  Summary.md
Week_2_Assignments/: Assignment_Week_2.bib  Summary.md
Week_3_Assignments/CppToolchain-AutoBuilding/: CMakeLists.txt  README.md
Week_3_Assignments/CppToolchain-Debugging/: m  mergesort.c
Week_4_Assignments/: README.md  exe_1.aux  exe_1.tex
Week_6_Assignments/: main.ipynb
Week_6_Assignments/.ipynb_checkpoints/: main-checkpoint.ipynb
Week_7_Assignments/: ML assignment.ipynb
